// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_into.sql > line 10 1`] = `
[
  "DROP TABLE sitmp1",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "sitmp1",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 12 1`] = `
[
  "SELECT *
   INTO TABLE sitmp1
   FROM onek2
   WHERE onek2.unique1 < 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "onek2",
                  "relpersistence": "p",
                },
              },
            ],
            "intoClause": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 23,
                "relname": "sitmp1",
                "relpersistence": "p",
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "onek2",
                        },
                      },
                      {
                        "String": {
                          "sval": "unique1",
                        },
                      },
                    ],
                    "location": 53,
                  },
                },
                "location": 67,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 69,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 22 1`] = `
[
  "CREATE SCHEMA selinto_schema",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaname": "selinto_schema",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 25 1`] = `
[
  "	  REVOKE INSERT ON TABLES FROM regress_selinto_user",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 32,
                  "rolename": "regress_selinto_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "tables",
                  "relpersistence": "p",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "insert",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 28 1`] = `
[
  "SET SESSION AUTHORIZATION regress_selinto_user",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_selinto_user",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 30 1`] = `
[
  "CREATE TABLE selinto_schema.tbl_withdata1 (a)
  AS SELECT generate_series(1,3) WITH DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "tbl_withdata1",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 58,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 74,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 3,
                                },
                                "location": 76,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "generate_series",
                              },
                            },
                          ],
                          "location": 58,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 34 1`] = `
[
  "  CREATE TABLE selinto_schema.tbl_withdata2 (a) AS
  SELECT generate_series(1,3) WITH DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 15,
                "relname": "tbl_withdata2",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 60,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 76,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 3,
                                },
                                "location": 78,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "generate_series",
                              },
                            },
                          ],
                          "location": 60,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 37 1`] = `
[
  "CREATE TABLE selinto_schema.tbl_nodata1 (a) AS
  SELECT generate_series(1,3) WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "tbl_nodata1",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 56,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 72,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 3,
                                },
                                "location": 74,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "generate_series",
                              },
                            },
                          ],
                          "location": 56,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 40 1`] = `
[
  "  CREATE TABLE selinto_schema.tbl_nodata2 (a) AS
  SELECT generate_series(1,3) WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 15,
                "relname": "tbl_nodata2",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 58,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 74,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 3,
                                },
                                "location": 76,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "generate_series",
                              },
                            },
                          ],
                          "location": 58,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 43 1`] = `
[
  "PREPARE data_sel AS SELECT generate_series(1,3)",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "data_sel",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 43,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 3,
                                },
                                "location": 45,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "generate_series",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 47 1`] = `
[
  "  CREATE TABLE selinto_schema.tbl_withdata4 (a) AS
  EXECUTE data_sel WITH DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 15,
                "relname": "tbl_withdata4",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "ExecuteStmt": {
                "name": "data_sel",
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 50 1`] = `
[
  "CREATE TABLE selinto_schema.tbl_nodata3 (a) AS
  EXECUTE data_sel WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "tbl_nodata3",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "ExecuteStmt": {
                "name": "data_sel",
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 53 1`] = `
[
  "  CREATE TABLE selinto_schema.tbl_nodata4 (a) AS
  EXECUTE data_sel WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "a",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 15,
                "relname": "tbl_nodata4",
                "relpersistence": "p",
                "schemaname": "selinto_schema",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "ExecuteStmt": {
                "name": "data_sel",
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 57 1`] = `
[
  "ALTER DEFAULT PRIVILEGES FOR ROLE regress_selinto_user
	  GRANT INSERT ON TABLES TO regress_selinto_user",
  {
    "stmts": [
      {
        "stmt": {
          "AlterDefaultPrivilegesStmt": {
            "action": {
              "behavior": "DROP_RESTRICT",
              "grantees": [
                {
                  "RoleSpec": {
                    "location": 84,
                    "rolename": "regress_selinto_user",
                    "roletype": "ROLESPEC_CSTRING",
                  },
                },
              ],
              "is_grant": true,
              "objtype": "OBJECT_TABLE",
              "privileges": [
                {
                  "AccessPriv": {
                    "priv_name": "insert",
                  },
                },
              ],
              "targtype": "ACL_TARGET_DEFAULTS",
            },
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 34,
                            "rolename": "regress_selinto_user",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "roles",
                  "location": 25,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 63 1`] = `
[
  "DEALLOCATE data_sel",
  {
    "stmts": [
      {
        "stmt": {
          "DeallocateStmt": {
            "name": "data_sel",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 68 1`] = `
[
  "CREATE TABLE ctas_base (i int, j int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ctas_base",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "j",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 70 1`] = `
[
  " -- Error
CREATE TABLE ctas_nodata (ii, jj, kk) AS SELECT i, j FROM ctas_base WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "ii",
                  },
                },
                {
                  "String": {
                    "sval": "jj",
                  },
                },
                {
                  "String": {
                    "sval": "kk",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 23,
                "relname": "ctas_nodata",
                "relpersistence": "p",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 68,
                      "relname": "ctas_base",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 58,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 58,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 61,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 61,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 71 1`] = `
[
  " -- Error
CREATE TABLE ctas_nodata (ii, jj) AS SELECT i, j FROM ctas_base",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "ii",
                  },
                },
                {
                  "String": {
                    "sval": "jj",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 23,
                "relname": "ctas_nodata",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 64,
                      "relname": "ctas_base",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 54,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 54,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 57,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 57,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 72 1`] = `
[
  " -- OK
CREATE TABLE ctas_nodata_2 (ii, jj) AS SELECT i, j FROM ctas_base WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "ii",
                  },
                },
                {
                  "String": {
                    "sval": "jj",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 20,
                "relname": "ctas_nodata_2",
                "relpersistence": "p",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 63,
                      "relname": "ctas_base",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 53,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 53,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 56,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 56,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 73 1`] = `
[
  " -- OK
CREATE TABLE ctas_nodata_3 (ii) AS SELECT i, j FROM ctas_base",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "ii",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 20,
                "relname": "ctas_nodata_3",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 59,
                      "relname": "ctas_base",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 49,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 52,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 52,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 74 1`] = `
[
  " -- OK
CREATE TABLE ctas_nodata_4 (ii) AS SELECT i, j FROM ctas_base WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "ii",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 20,
                "relname": "ctas_nodata_4",
                "relpersistence": "p",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 59,
                      "relname": "ctas_base",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 49,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 52,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "j",
                              },
                            },
                          ],
                          "location": 52,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 75 1`] = `
[
  " -- OK
SELECT * FROM ctas_nodata",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "ctas_nodata",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 90 1`] = `
[
  "CREATE FUNCTION make_table() RETURNS VOID
AS $$
  CREATE TABLE created_table AS SELECT * FROM int8_tbl;
$$ LANGUAGE SQL",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "make_table",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
  CREATE TABLE created_table AS SELECT * FROM int8_tbl;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 42,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 107,
                },
              },
            ],
            "returnType": {
              "location": 37,
              "names": [
                {
                  "String": {
                    "sval": "void",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 95 1`] = `
[
  "SELECT make_table()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "make_table",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 97 1`] = `
[
  "SELECT * FROM created_table",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "created_table",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 101 1`] = `
[
  "DO $$
BEGIN
	EXECUTE 'EXPLAIN ANALYZE SELECT * INTO TABLE easi FROM int8_tbl';
	EXECUTE 'EXPLAIN ANALYZE CREATE TABLE easi2 AS SELECT * FROM int8_tbl WITH NO DATA';
END$$",
  {
    "stmts": [
      {
        "stmt": {
          "DoStmt": {
            "args": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "
BEGIN
	EXECUTE 'EXPLAIN ANALYZE SELECT * INTO TABLE easi FROM int8_tbl';
	EXECUTE 'EXPLAIN ANALYZE CREATE TABLE easi2 AS SELECT * FROM int8_tbl WITH NO DATA';
END",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 3,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 107 1`] = `
[
  "DROP TABLE created_table",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "created_table",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 113 1`] = `
[
  "DECLARE foo CURSOR FOR SELECT 1 INTO int4_tbl",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "foo",
            "query": {
              "SelectStmt": {
                "intoClause": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 37,
                    "relname": "int4_tbl",
                    "relpersistence": "p",
                  },
                },
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 30,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 30,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 120 1`] = `
[
  "CREATE TABLE ctas_ine_tbl AS SELECT 1",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "ctas_ine_tbl",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 121 1`] = `
[
  " -- error
CREATE TABLE IF NOT EXISTS ctas_ine_tbl AS SELECT 1 / 0",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "if_not_exists": true,
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 37,
                "relname": "ctas_ine_tbl",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 60,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 60,
                            },
                          },
                          "location": 62,
                          "name": [
                            {
                              "String": {
                                "sval": "/",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 64,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 122 1`] = `
[
  " -- ok
CREATE TABLE ctas_ine_tbl AS SELECT 1 / 0 WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 20,
                "relname": "ctas_ine_tbl",
                "relpersistence": "p",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 43,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 43,
                            },
                          },
                          "location": 45,
                          "name": [
                            {
                              "String": {
                                "sval": "/",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 47,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 123 1`] = `
[
  " -- error
CREATE TABLE IF NOT EXISTS ctas_ine_tbl AS SELECT 1 / 0 WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "if_not_exists": true,
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 37,
                "relname": "ctas_ine_tbl",
                "relpersistence": "p",
              },
              "skipData": true,
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 60,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 60,
                            },
                          },
                          "location": 62,
                          "name": [
                            {
                              "String": {
                                "sval": "/",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 64,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 124 1`] = `
[
  " -- ok
EXPLAIN (ANALYZE, COSTS OFF, SUMMARY OFF, TIMING OFF)
  CREATE TABLE ctas_ine_tbl AS SELECT 1 / 0",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 16,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 25,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "summary",
                  "location": 36,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "timing",
                  "location": 49,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 76,
                    "relname": "ctas_ine_tbl",
                    "relpersistence": "p",
                  },
                },
                "objtype": "OBJECT_TABLE",
                "query": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 99,
                          "val": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 99,
                                },
                              },
                              "location": 101,
                              "name": [
                                {
                                  "String": {
                                    "sval": "/",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {},
                                  "location": 103,
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 126 1`] = `
[
  " -- error
EXPLAIN (ANALYZE, COSTS OFF, SUMMARY OFF, TIMING OFF)
  CREATE TABLE IF NOT EXISTS ctas_ine_tbl AS SELECT 1 / 0",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 19,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 28,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "summary",
                  "location": 39,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "timing",
                  "location": 52,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "if_not_exists": true,
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 93,
                    "relname": "ctas_ine_tbl",
                    "relpersistence": "p",
                  },
                },
                "objtype": "OBJECT_TABLE",
                "query": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 116,
                          "val": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 116,
                                },
                              },
                              "location": 118,
                              "name": [
                                {
                                  "String": {
                                    "sval": "/",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {},
                                  "location": 120,
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 128 1`] = `
[
  " -- ok
EXPLAIN (ANALYZE, COSTS OFF, SUMMARY OFF, TIMING OFF)
  CREATE TABLE ctas_ine_tbl AS SELECT 1 / 0 WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 16,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 25,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "summary",
                  "location": 36,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "timing",
                  "location": 49,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 76,
                    "relname": "ctas_ine_tbl",
                    "relpersistence": "p",
                  },
                  "skipData": true,
                },
                "objtype": "OBJECT_TABLE",
                "query": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 99,
                          "val": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 99,
                                },
                              },
                              "location": 101,
                              "name": [
                                {
                                  "String": {
                                    "sval": "/",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {},
                                  "location": 103,
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 130 1`] = `
[
  " -- error
EXPLAIN (ANALYZE, COSTS OFF, SUMMARY OFF, TIMING OFF)
  CREATE TABLE IF NOT EXISTS ctas_ine_tbl AS SELECT 1 / 0 WITH NO DATA",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 19,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 28,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "summary",
                  "location": 39,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "timing",
                  "location": 52,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "if_not_exists": true,
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 93,
                    "relname": "ctas_ine_tbl",
                    "relpersistence": "p",
                  },
                  "skipData": true,
                },
                "objtype": "OBJECT_TABLE",
                "query": {
                  "SelectStmt": {
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 116,
                          "val": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 116,
                                },
                              },
                              "location": 118,
                              "name": [
                                {
                                  "String": {
                                    "sval": "/",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {},
                                  "location": 120,
                                },
                              },
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 132 1`] = `
[
  " -- ok
PREPARE ctas_ine_query AS SELECT 1 / 0",
  {
    "stmts": [
      {
        "stmt": {
          "PrepareStmt": {
            "name": "ctas_ine_query",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 40,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 40,
                            },
                          },
                          "location": 42,
                          "name": [
                            {
                              "String": {
                                "sval": "/",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 44,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 135 1`] = `
[
  "  CREATE TABLE ctas_ine_tbl AS EXECUTE ctas_ine_query",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 15,
                "relname": "ctas_ine_tbl",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "ExecuteStmt": {
                "name": "ctas_ine_query",
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 135 2`] = `
[
  " -- error
EXPLAIN (ANALYZE, COSTS OFF, SUMMARY OFF, TIMING OFF)
  CREATE TABLE IF NOT EXISTS ctas_ine_tbl AS EXECUTE ctas_ine_query",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 19,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 28,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "summary",
                  "location": 39,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "timing",
                  "location": 52,
                },
              },
            ],
            "query": {
              "CreateTableAsStmt": {
                "if_not_exists": true,
                "into": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 93,
                    "relname": "ctas_ine_tbl",
                    "relpersistence": "p",
                  },
                },
                "objtype": "OBJECT_TABLE",
                "query": {
                  "ExecuteStmt": {
                    "name": "ctas_ine_query",
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_into.sql > line 137 1`] = `
[
  " -- ok
DROP TABLE ctas_ine_tbl",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "ctas_ine_tbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
